# einsum_play

./: CMakeLists.txt  H3.py  H3withSplit.py  H3withsp.py  README.md  env.sh  h3.ipynb  scale.ipynb  scale1.ipynb  setLib.sh
code_gen/: loop_gen.cpp
cuda_src/: Makefile  tensor.cu  trival.cu
include/: gen_data.h
src/: main.cc
